fix alignment with up arrow

--- a/app/assets/stylesheets/questions.css.scss
+++ b/app/assets/stylesheets/questions.css.scss
@@ -46,6 +46,7 @@ p,h2,h4 {
   font-family: 'Source Sans Pro', sans-serif;
   font-size: 16px;
   line-height: 1.25em;
+  overflow-x: hidden;
 }
 
 .thumb-stylist{
